--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 # WIP Site
 
-Personal Website / Landing Page: https://jniewiel.github.io/
+Website portfolio for Jan Niewielski. 
+Created with HTML, CSS, and JavaScript. 
+
+https://jniewiel.github.io/
 
 
